Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1399

lustre_cfg_new should return NULL instead of ERR_PTR(-ENOMEM)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • None
    • None
    • 3
    • 9750

      lustre_cfg_new() currently returns ERR_PTR(-ENOMEM) at allocation failure, but all callers except one checks its return against NULL. As there's no other error to return, I think lustre_cfg_new() should simply return NULL rather than error coded pointers.

      Also, a minor issue in ptlrpc_check_status(), the console message suppression branch will never be entered and thus is rendered useless.

      A patch will follow shortly to fix them.

            dmiter Dmitry Eremin (Inactive)
            isaac Isaac Huang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: