LU-1399 config: lustre_cfg_new() should return NULL

All lustre_cfg_new() callers but one checks its return against
NULL, but it currently returns ERR_PTR(-ENOMEM). As there's no
other error to return, lustre_cfg_new() should simply return NULL.

In ptlrpc_check_status(), the branch to suppress console error on
PTL_RPC_MSG_ERR replies will never execute, because an identical
check for PTL_RPC_MSG_ERR at the beginning of the function has
returned on such cases.

Signed-off-by: Isaac Huang <Isaac_Huang@xyratex.com>
Change-Id: Id39b0eea100ea952be37eca30e9cdac02b63a1af